--- a/domain/Cargo.toml
+++ b/domain/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 common = { path = "../common" }
 derive_builder = "0.10.2"
-derive-getters = "0.2.0"
+getset = "0.1.1"
+ghost = "0.1"
 ulid = "0.4.1"
 anyhow = "1.0"
