--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,13 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-common = { path = "./common" }
 derive_builder = "0.10.2"
 getset = "0.1.1"
 derive-new = "0.5"
 ghost = "0.1"
 ulid = "0.4.1"
 anyhow = "1.0"
+thiserror = "1.0"
 once_cell = "1.8.0"
 tonic = { version = "0.4.2", features = ["tls"] }
 prost = "0.7"
