--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+waiter_di = "1.6.5"
 derive_builder = "0.10.2"
 getset = "0.1.1"
 derive-new = "0.5"
